kubernetes/apps/api/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    service: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: api
